# Converter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  common.h
.github/workflows/: build.yml
cmake/: Packaging.cmake
docs/: _config.yml  converter.html  converter.js  index.html  index.md  site.webmanifest
packaging/: SConverter.desktop  SMEConverter.desktop  build.sh
packaging/Converter/DEBIAN/: control
packaging/Converter/usr/share/applications/: SMEConverter.desktop
ressources/: Icon.xcf  icons.qrc  ressources.qrc
ressources/icon/: Icon.icns  icons.sh
scripts/: updateTranslations.sh
src/: asciiart.cpp  asciiart.h  common.cpp  converter.cpp  converter.h  highlighter.cpp  highlighter.h  imagedialouge.cpp  imagedialouge.h  main.cpp  mainwindow.cpp  mainwindow.h  markdownparser.cpp  markdownparser.h  mimetype.cpp  mimetype.h  typeparser.cpp  typeparser.h
translations/: Converter_de_DE.ts
ui/: mainwindow.ui
